# functional_programming

./: README.md
lab1/: Dockerfile  README.md  build.sbt
lab1/demos/: zad2_demo.mov  zad3_demo.mov  zad5_demo.mov  zad_4_demo.mov
lab1/solutions/src/main/scala/: SimpleApp.scala
lab1/solutions/src/main/scala/.bsp/: scala.json
lab1/solutions/src/main/scala/.scala-build/: ide-envs.json  ide-inputs.json  ide-launcher-options.json
lab1/solutions/src/main/scala/.scala-build/.bloop/: scala_05a3b9ced8-801ec32383.json
lab1/solutions/src/main/scala/.scala-build/scala_05a3b9ced8-801ec32383/classes/main/: SimpleApp.tasty
lab2/: Dockerfile
lab3/: Dockerfile  README.md  build.sbt
lab3/solutions3/src/main/scala/: LinkedList.scala  SingelLinkedList.scala  zad3.scala
lab4/: Dockerfile  build.sbt
lab4/solutions4/src/main/scala/: zad4.scala
lab5/: Dockerfile  README.md  build.sbt
lab5/solutions5/src/main/scala/: trait.scala  zad5.scala
lab6/: API.cabal  Dockerfile
lab6/app/: Main.hs
lab7/: APP.cabal  Dockerfile
lab7/app/: Main.hs
