cabal-version:      2.4
name:               API
version:            0.1.0.0
synopsis:           Simple Scotty API server
license:            BSD-3-Clause
author:             Jakub Figura
maintainer:         jakub.figura@doctoral.uj.edu.pl
build-type:         Simple

executable API
    main-is:          Main.hs
    build-depends:    base ^>=4.18,
                      scotty,
                      aeson,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
